@@ -83,7 +83,8 @@ along with Postorius. If not, see &lt;<a class="reference external" href="http:/
 <li>added test helper utils</li>
 <li>all code now conform to PEP8</li>
 <li>themes: removed obsolete MAILMAN_THEME settings from templates, contexts, file structure; contributed by Richard Wackerbarth (LP: 1043258)</li>
-<li>added access control for list owners</li>
+<li>added access control for list owners and moderators</li>
+<li>added a mailmanclient shell to use as a <cite>manage.py</cite> command (<cite>python manage.py mmclient</cite>)</li>
 </ul>
 </div>
 <div class="section" id="alpha-1-space-farm">
